--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <header>
         <h1>Birdwatching Tennessee</h1>
     </header>
-
+    
     <main>
 
         <section>
-
+            <h2>bluejay</h2>
         </section>
 
         <section>
