added html elements

--- a/index.html
+++ b/index.html
@@ -14,19 +14,112 @@
     <header>
         <h1>Birdwatching Tennessee</h1>
     </header>
-    
+
     <main>
 
         <section>
-            <h2>bluejay</h2>
+            <a href="https://github.com/joseph-s-foster/Birdwatching-Tennessee">
+                <img src="./assets/motion.png" alt="Placeholder" title="Placeholder">
+                <p>Placeholder</p>
+            </a>
         </section>
 
         <section>
-
+            <a href="https://github.com/joseph-s-foster/Birdwatching-Tennessee">
+                <img src="./assets/motion.png" alt="Placeholder" title="Placeholder">
+                <p>Placeholder</p>
+            </a>
         </section>
 
         <section>
+            <a href="https://github.com/joseph-s-foster/Birdwatching-Tennessee">
+                <img src="./assets/motion.png" alt="Placeholder" title="Placeholder">
+                <p>Placeholder</p>
+            </a>
+        </section>
 
+        <section>
+            <a href="https://github.com/joseph-s-foster/Birdwatching-Tennessee">
+                <img src="./assets/motion.png" alt="Placeholder" title="Placeholder">
+                <p>Placeholder</p>
+            </a>
+        </section>
+
+        <section>
+            <a href="https://github.com/joseph-s-foster/Birdwatching-Tennessee">
+                <img src="./assets/motion.png" alt="Placeholder" title="Placeholder">
+                <p>Placeholder</p>
+            </a>
+        </section>
+
+        <section>
+            <a href="https://github.com/joseph-s-foster/Birdwatching-Tennessee">
+                <img src="./assets/motion.png" alt="Placeholder" title="Placeholder">
+                <p>Placeholder</p>
+            </a>
+        </section>
+
+        <section>
+            <a href="https://github.com/joseph-s-foster/Birdwatching-Tennessee">
+                <img src="./assets/motion.png" alt="Placeholder" title="Placeholder">
+                <p>Placeholder</p>
+            </a>
+        </section>
+
+        <section>
+            <a href="https://github.com/joseph-s-foster/Birdwatching-Tennessee">
+                <img src="./assets/motion.png" alt="Placeholder" title="Placeholder">
+                <p>Placeholder</p>
+            </a>
+        </section>
+
+        <section>
+            <a href="https://github.com/joseph-s-foster/Birdwatching-Tennessee">
+                <img src="./assets/motion.png" alt="Placeholder" title="Placeholder">
+                <p>Placeholder</p>
+            </a>
+        </section>
+
+        <section>
+            <a href="https://github.com/joseph-s-foster/Birdwatching-Tennessee">
+                <img src="./assets/motion.png" alt="Placeholder" title="Placeholder">
+                <p>Placeholder</p>
+            </a>
+        </section>
+
+        <section>
+            <a href="https://github.com/joseph-s-foster/Birdwatching-Tennessee">
+                <img src="./assets/motion.png" alt="Placeholder" title="Placeholder">
+                <p>Placeholder</p>
+            </a>
+        </section>
+
+        <section>
+            <a href="https://github.com/joseph-s-foster/Birdwatching-Tennessee">
+                <img src="./assets/motion.png" alt="Placeholder" title="Placeholder">
+                <p>Placeholder</p>
+            </a>
+        </section>
+
+        <section>
+            <a href="https://github.com/joseph-s-foster/Birdwatching-Tennessee">
+                <img src="./assets/motion.png" alt="Placeholder" title="Placeholder">
+                <p>Placeholder</p>
+            </a>
+        </section>
+
+        <section>
+            <a href="https://github.com/joseph-s-foster/Birdwatching-Tennessee">
+                <img src="./assets/motion.png" alt="Placeholder" title="Placeholder">
+                <p>Placeholder</p>
+            </a>
+        </section>
+
+        <section>
+            <a href="https://github.com/joseph-s-foster/Birdwatching-Tennessee">
+                <img src="./assets/motion.png" alt="Placeholder" title="Placeholder">
+                <p>Placeholder</p>
+            </a>
         </section>
 
     </main>
