--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1>Birdwatching Tennessee</h1>
     </header>
 
-    <main>
+    <main class="container-fluid">
 
         <section>
             <a href="https://github.com/joseph-s-foster/Birdwatching-Tennessee">
