--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     </header>
     
     <main>
+        <button class="btn" id="info">
+            Click Me
+        </button>
 
         <section>
             <h2>bluejay</h2>
