--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <link rel="stylesheet" href="./assets/reset.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <link rel="stylesheet" href="./assets/style.css" />
     <title>Birdwatching Tennessee</title>
 </head>
@@ -17,16 +17,109 @@
 
     <main>
 
-        <section>
-
+        <section id="bluebird" class=".">
+            <a href="https://github.com/joseph-s-foster/Birdwatching-Tennessee">
+                <img src="./assets/motion.png" alt="Placeholder" title="Placeholder">
+                <p>Southeastern Bluebird</p>
+            </a>
         </section>
 
-        <section>
-
+        <section id="nwarbler" class=".">
+            <a href="https://github.com/joseph-s-foster/Birdwatching-Tennessee">
+                <img src="./assets/motion.png" alt="Placeholder" title="Placeholder">
+                <p>Nashville Warbler</p>
+            </a>
         </section>
 
-        <section>
+        <section id="dejunco" class=".">
+            <a href="https://github.com/joseph-s-foster/Birdwatching-Tennessee">
+                <img src="./assets/motion.png" alt="Placeholder" title="Placeholder">
+                <p>Dark-Eyed Junco</p>
+            </a>
+        </section>
 
+        <section id="rthawk" class=".">
+            <a href="https://github.com/joseph-s-foster/Birdwatching-Tennessee">
+                <img src="./assets/motion.png" alt="Placeholder" title="Placeholder">
+                <p>Red Tailed Hawk</p>
+            </a>
+        </section>
+
+        <section id="dwoodpecker" class=".">
+            <a href="https://github.com/joseph-s-foster/Birdwatching-Tennessee">
+                <img src="./assets/motion.png" alt="Placeholder" title="Placeholder">
+                <p>Downy Woodpecker</p>
+            </a>
+        </section>
+
+        <section id="esowl" class=".">
+            <a href="https://github.com/joseph-s-foster/Birdwatching-Tennessee">
+                <img src="./assets/motion.png" alt="Placeholder" title="Placeholder">
+                <p>Eastern Screech Owl</p>
+            </a>
+        </section>
+
+        <section id="ncardinal" class=".">
+            <a href="https://github.com/joseph-s-foster/Birdwatching-Tennessee">
+                <img src="./assets/motion.png" alt="Placeholder" title="Placeholder">
+                <p>Northern Cardinal</p>
+            </a>
+        </section>
+
+        <section id="hfinch" class=".">
+            <a href="https://github.com/joseph-s-foster/Birdwatching-Tennessee">
+                <img src="./assets/motion.png" alt="Placeholder" title="Placeholder">
+                <p>House Finch</p>
+            </a>
+        </section>
+
+        <section id="rbwoodpecker" class=".">
+            <a href="https://github.com/joseph-s-foster/Birdwatching-Tennessee">
+                <img src="./assets/motion.png" alt="Placeholder" title="Placeholder">
+                <p>Red-Bellied Woodpecker</p>
+            </a>
+        </section>
+
+        <section id="bjay" class=".">
+            <a href="https://github.com/joseph-s-foster/Birdwatching-Tennessee">
+                <img src="./assets/motion.png" alt="Placeholder" title="Placeholder">
+                <p>Blue Jay</p>
+            </a>
+        </section>
+
+        <section id="rndove" class=".">
+            <a href="https://github.com/joseph-s-foster/Birdwatching-Tennessee">
+                <img src="./assets/motion.png" alt="Placeholder" title="Placeholder">
+                <p>Ring Necked Dove</p>
+            </a>
+        </section>
+
+        <section id="arobin" class=".">
+            <a href="https://github.com/joseph-s-foster/Birdwatching-Tennessee">
+                <img src="./assets/motion.png" alt="Placeholder" title="Placeholder">
+                <p>American Robin</p>
+            </a>
+        </section>
+
+        <section id="etowhee" class=".">
+            <a href="https://github.com/joseph-s-foster/Birdwatching-Tennessee">
+                <img src="./assets/motion.png" alt="Placeholder" title="Placeholder">
+                <p>Eastern Towhee</p>
+            </a>
+        </section>
+
+        <section id="mdove" class=".">
+            <a href="https://github.com/joseph-s-foster/Birdwatching-Tennessee">
+                <img src="./assets/motion.png" alt="Placeholder" title="Placeholder">
+                <p>Mourning Dove</p>
+            </a>
+        </section>
+
+        <section id="cwren" class=".">
+            <a href="https://github.com/joseph-s-foster/Birdwatching-Tennessee">
+                <img src="./assets/motion.png" alt="Placeholder" title="Placeholder">
+                <p>Carolina Wren</p>
+            </a>
         </section>
 
     </main>
