updated modal with bulma formatting

--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
 
     <main class="container-fluid">
 
+        <div class="modal" id="weatherModal">
+            <div class="modal-background"></div>
+            <div class="modal-content has-text-centered">
+                <p id="modalMessage"></p>
+            </div>
+            <button class="modal-close is-large" aria-label="close"></button>
+        </div>
+
         <section id="bluebird" class=".">
             <a href="https://github.com/joseph-s-foster/Birdwatching-Tennessee">
                 <img src="./assets/motion.png" alt="Placeholder" title="Placeholder">
@@ -118,7 +126,7 @@
         <section id="cwren" class=".">
             <a href="https://github.com/joseph-s-foster/Birdwatching-Tennessee">
                 <img src="./assets/motion.png" alt="Placeholder" title="Placeholder">
-              <p>Carolina Wren</p>
+                <p>Carolina Wren</p>
             </a>
         </section>
 
