added bulma style classes in html, through js, and edited through the css file

--- a/index.html
+++ b/index.html
@@ -10,116 +10,221 @@
     <title>Birdwatching Tennessee</title>
 </head>
 
-<body>
+<body class="has-background-primary">
     <header>
         <h1>Birdwatching Tennessee</h1>
     </header>
 
     <main class="container-fluid">
 
-        <section id="bluebird" class=".">
-            <a href="https://github.com/joseph-s-foster/Birdwatching-Tennessee">
-                <img src="./assets/motion.png" alt="Placeholder" title="Placeholder">
-                <p>Southeastern Bluebird</p>
-            </a>
+        <section id="bluebird">
+            <div class="container">
+                <div class="columns">
+                    <div class="column is-one-third">
+                <a href="https://github.com/joseph-s-foster/Birdwatching-Tennessee">
+                    <img src="./assets/motion.png" alt="Placeholder" title="Placeholder">
+                    <h4>Southeastern Bluebird</h4>
+                </a>
+                </div>
+                <p>Definitely a bird</p>
+                </div>
+            </div>
         </section>
 
-        <section id="nwarbler" class=".">
+        <section id="nwarbler">
+            <div class="container">
+                <div class="columns">
+                    <div class="column is-one-third">
             <a href="https://github.com/joseph-s-foster/Birdwatching-Tennessee">
                 <img src="./assets/motion.png" alt="Placeholder" title="Placeholder">
-                <p>Nashville Warbler</p>
+                <h4>Nashville Warbler</h4>
             </a>
+        </div>
+        <p>Definitely a bird</p>
+        </div>
+    </div>
         </section>
 
-        <section id="dejunco" class=".">
+        <section id="dejunco">
+            <div class="container">
+                <div class="columns">
+                    <div class="column is-one-third">
             <a href="https://github.com/joseph-s-foster/Birdwatching-Tennessee">
                 <img src="./assets/motion.png" alt="Placeholder" title="Placeholder">
-                <p>Dark-Eyed Junco</p>
+                <h4>Dark-Eyed Junco</h4>
             </a>
+                </div>
+        <p>Definitely a bird</p>
+                </div>
+            </div>
         </section>
 
-        <section id="rthawk" class=".">
+        <section id="rthawk">
+            <div class="container">
+                <div class="columns">
+                    <div class="column is-one-third">
             <a href="https://github.com/joseph-s-foster/Birdwatching-Tennessee">
                 <img src="./assets/motion.png" alt="Placeholder" title="Placeholder">
-                <p>Red Tailed Hawk</p>
+                <h4>Red Tailed Hawk</h4>
             </a>
+        </div>
+        <p>Definitely a bird</p>
+        </div>
+    </div>
         </section>
 
-        <section id="dwoodpecker" class=".">
-            <a href="https://github.com/joseph-s-foster/Birdwatching-Tennessee">
+        <section id="dwoodpecker">
+            <div class="container">
+                <div class="columns">
+                    <div class="column is-one-third">
+            <a href="https:/github.com/joseph-s-foster/Birdwatching-Tennessee">
                 <img src="./assets/motion.png" alt="Placeholder" title="Placeholder">
-                <p>Downy Woodpecker</p>
+                <h4>Downy Woodpecker</h4>
             </a>
+        </div>
+        <p>Definitely a bird</p>
+        </div>
+    </div>
         </section>
 
-        <section id="esowl" class=".">
+        <section id="esowl">
+            <div class="container">
+                <div class="columns">
+                    <div class="column is-one-third">
             <a href="https://github.com/joseph-s-foster/Birdwatching-Tennessee">
                 <img src="./assets/motion.png" alt="Placeholder" title="Placeholder">
-                <p>Eastern Screech Owl</p>
+                <h4>Eastern Screech Owl</h4>
             </a>
+        </div>
+        <p>Definitely a bird</p>
+        </div>
+    </div>
         </section>
 
-        <section id="ncardinal" class=".">
+        <section id="ncardinal">
+            <div class="container">
+                <div class="columns">
+                    <div class="column is-one-third">
             <a href="https://github.com/joseph-s-foster/Birdwatching-Tennessee">
                 <img src="./assets/motion.png" alt="Placeholder" title="Placeholder">
-                <p>Northern Cardinal</p>
+                <h4>Northern Cardinal</h4>
             </a>
+        </div>
+        <p>Definitely a bird</p>
+        </div>
+    </div>
         </section>
 
-        <section id="hfinch" class=".">
+        <section id="hfinch">
+            <div class="container">
+                <div class="columns">
+                    <div class="column is-one-third">
             <a href="https://github.com/joseph-s-foster/Birdwatching-Tennessee">
                 <img src="./assets/motion.png" alt="Placeholder" title="Placeholder">
-                <p>House Finch</p>
+                <h4>House Finch</h4>
             </a>
+        </div>
+        <p>Definitely a bird</p>
+        </div>
+    </div>
         </section>
 
-        <section id="rbwoodpecker" class=".">
+        <section id="rbwoodpecker">
+            <div class="container">
+                <div class="columns">
+                    <div class="column is-one-third">
             <a href="https://github.com/joseph-s-foster/Birdwatching-Tennessee">
                 <img src="./assets/motion.png" alt="Placeholder" title="Placeholder">
-                <p>Red-Bellied Woodpecker</p>
+                <h4>Red-Bellied Woodpecker</h4>
             </a>
+        </div>
+        <p>Definitely a bird</p>
+        </div>
+    </div>
         </section>
 
-        <section id="bjay" class=".">
+        <section id="bjay">
+            <div class="container">
+                <div class="columns">
+                    <div class="column is-one-third">
             <a href="https://github.com/joseph-s-foster/Birdwatching-Tennessee">
                 <img src="./assets/motion.png" alt="Placeholder" title="Placeholder">
-                <p>Blue Jay</p>
+                <h4>Blue Jay</h4>
             </a>
+        </div>
+        <p>Definitely a bird</p>
+        </div>
+    </div>
         </section>
 
-        <section id="rndove" class=".">
+        <section id="rndove">
+            <div class="container">
+                <div class="columns">
+                    <div class="column is-one-third">
             <a href="https://github.com/joseph-s-foster/Birdwatching-Tennessee">
                 <img src="./assets/motion.png" alt="Placeholder" title="Placeholder">
-                <p>Ring Necked Dove</p>
+                <h4>Ring Necked Dove</h4>
             </a>
+        </div>
+        <p>Definitely a bird</p>
+        </div>
+    </div>
         </section>
 
-        <section id="arobin" class=".">
+        <section id="arobin">
+            <div class="container">
+                <div class="columns">
+                    <div class="column is-one-third">
             <a href="https://github.com/joseph-s-foster/Birdwatching-Tennessee">
                 <img src="./assets/motion.png" alt="Placeholder" title="Placeholder">
-                <p>American Robin</p>
+                <h4>American Robin</h4>
             </a>
+        </div>
+        <p>Definitely a bird</p>
+        </div>
+    </div>
         </section>
 
-        <section id="etowhee" class=".">
+        <section id="etowhee">
+            <div class="container">
+                <div class="columns">
+                    <div class="column is-one-third">
             <a href="https://github.com/joseph-s-foster/Birdwatching-Tennessee">
                 <img src="./assets/motion.png" alt="Placeholder" title="Placeholder">
-                <p>Eastern Towhee</p>
+                <h4>Eastern Towhee</h4>
             </a>
+        </div>
+        <p>Definitely a bird</p>
+        </div>
+    </div>
         </section>
 
-        <section id="mdove" class=".">
+        <section id="mdove">
+            <div class="container">
+                <div class="columns">
+                    <div class="column is-one-third">
             <a href="https://github.com/joseph-s-foster/Birdwatching-Tennessee">
                 <img src="./assets/motion.png" alt="Placeholder" title="Placeholder">
-                <p>Mourning Dove</p>
+                <h4>Mourning Dove</h4>
             </a>
+        </div>
+        <p>Definitely a bird</p>
+        </div>
+    </div>
         </section>
 
-        <section id="cwren" class=".">
+        <section id="cwren">
+            <div class="container">
+                <div class="columns">
+                    <div class="column is-one-third">
             <a href="https://github.com/joseph-s-foster/Birdwatching-Tennessee">
                 <img src="./assets/motion.png" alt="Placeholder" title="Placeholder">
-              <p>Carolina Wren</p>
+              <h4>Carolina Wren</h4>
             </a>
+        </div>
+        <p>Definitely a bird</p>
+        </div>
+    </div>
         </section>
 
     </main>
