--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <div class="columns">
                     <div class="column is-one-third">
                 <a href="https://github.com/joseph-s-foster/Birdwatching-Tennessee">
-                    <img src="./assets/motion.png" alt="Placeholder" title="Placeholder">
+                    <img src="./assets/Southeastern Bluebird.png" alt="a picture of a bluebird" title="Southeastern Bluebird">
                     <h4>Southeastern Bluebird</h4>
                 </a>
                 </div>
@@ -48,7 +48,7 @@
                 <div class="columns">
                     <div class="column is-one-third">
             <a href="https://github.com/joseph-s-foster/Birdwatching-Tennessee">
-                <img src="./assets/motion.png" alt="Placeholder" title="Placeholder">
+                <img src="./assets/Nashville warbler.png" alt="a picture of a warbler" title="Nashville Warbler">
                 <h4>Nashville Warbler</h4>
             </a>
         </div>
@@ -62,7 +62,7 @@
                 <div class="columns">
                     <div class="column is-one-third">
             <a href="https://github.com/joseph-s-foster/Birdwatching-Tennessee">
-                <img src="./assets/motion.png" alt="Placeholder" title="Placeholder">
+                <img src="./assets/Dark-eyed junco.png" alt="a picture of a junco" title="Dark-Eyed Junco">
                 <h4>Dark-Eyed Junco</h4>
             </a>
                 </div>
@@ -76,7 +76,7 @@
                 <div class="columns">
                     <div class="column is-one-third">
             <a href="https://github.com/joseph-s-foster/Birdwatching-Tennessee">
-                <img src="./assets/motion.png" alt="Placeholder" title="Placeholder">
+                <img src="./assets/Red tail hawk.png" alt="a picture of a hawk" title="Red Tailed Hawk">
                 <h4>Red Tailed Hawk</h4>
             </a>
         </div>
@@ -90,7 +90,7 @@
                 <div class="columns">
                     <div class="column is-one-third">
             <a href="https:/github.com/joseph-s-foster/Birdwatching-Tennessee">
-                <img src="./assets/motion.png" alt="Placeholder" title="Placeholder">
+                <img src="./assets/Downy Woodpecker.png" alt="a picture of a woodpecker" title="Downy Woodpecker">
                 <h4>Downy Woodpecker</h4>
             </a>
         </div>
@@ -104,7 +104,7 @@
                 <div class="columns">
                     <div class="column is-one-third">
             <a href="https://github.com/joseph-s-foster/Birdwatching-Tennessee">
-                <img src="./assets/motion.png" alt="Placeholder" title="Placeholder">
+                <img src="./assets/Eastern screech owl.png" alt="a picture of an owl" title="Eastern Screech Owl">
                 <h4>Eastern Screech Owl</h4>
             </a>
         </div>
@@ -118,7 +118,7 @@
                 <div class="columns">
                     <div class="column is-one-third">
             <a href="https://github.com/joseph-s-foster/Birdwatching-Tennessee">
-                <img src="./assets/motion.png" alt="Placeholder" title="Placeholder">
+                <img src="./assets/Northern Cardinal.png" alt="a picture of a cardinal" title="Northern Cardinal">
                 <h4>Northern Cardinal</h4>
             </a>
         </div>
@@ -132,7 +132,7 @@
                 <div class="columns">
                     <div class="column is-one-third">
             <a href="https://github.com/joseph-s-foster/Birdwatching-Tennessee">
-                <img src="./assets/motion.png" alt="Placeholder" title="Placeholder">
+                <img src="./assets/House Finch.png" alt="a picture of a Finch" title="House Finch">
                 <h4>House Finch</h4>
             </a>
         </div>
@@ -146,7 +146,7 @@
                 <div class="columns">
                     <div class="column is-one-third">
             <a href="https://github.com/joseph-s-foster/Birdwatching-Tennessee">
-                <img src="./assets/motion.png" alt="Placeholder" title="Placeholder">
+                <img src="./assets/Red-Bellied woodpecker.png" alt="a picture of a woodpecker" title="Red-Bellied Woodpecker">
                 <h4>Red-Bellied Woodpecker</h4>
             </a>
         </div>
@@ -160,7 +160,7 @@
                 <div class="columns">
                     <div class="column is-one-third">
             <a href="https://github.com/joseph-s-foster/Birdwatching-Tennessee">
-                <img src="./assets/motion.png" alt="Placeholder" title="Placeholder">
+                <img src="./assets/Blue Jay.png" alt="a picture of a blue jay" title="Blue Jay">
                 <h4>Blue Jay</h4>
             </a>
         </div>
@@ -174,7 +174,7 @@
                 <div class="columns">
                     <div class="column is-one-third">
             <a href="https://github.com/joseph-s-foster/Birdwatching-Tennessee">
-                <img src="./assets/motion.png" alt="Placeholder" title="Placeholder">
+                <img src="./assets/Ring Necked Dove.png" alt="a picture of a dove" title="Ring Necked Dove">
                 <h4>Ring Necked Dove</h4>
             </a>
         </div>
@@ -188,7 +188,7 @@
                 <div class="columns">
                     <div class="column is-one-third">
             <a href="https://github.com/joseph-s-foster/Birdwatching-Tennessee">
-                <img src="./assets/motion.png" alt="Placeholder" title="Placeholder">
+                <img src="./assets/American Robin.png" alt="a picture of a robin" title="American Robin">
                 <h4>American Robin</h4>
             </a>
         </div>
@@ -202,7 +202,7 @@
                 <div class="columns">
                     <div class="column is-one-third">
             <a href="https://github.com/joseph-s-foster/Birdwatching-Tennessee">
-                <img src="./assets/motion.png" alt="Placeholder" title="Placeholder">
+                <img src="./assets/Eastern Towhee.png" alt="a picture of a towhee" title="Eastern Towhee">
                 <h4>Eastern Towhee</h4>
             </a>
         </div>
@@ -216,7 +216,7 @@
                 <div class="columns">
                     <div class="column is-one-third">
             <a href="https://github.com/joseph-s-foster/Birdwatching-Tennessee">
-                <img src="./assets/motion.png" alt="Placeholder" title="Placeholder">
+                <img src="./assets/Mourning Dove.png" alt="a picture of a dove" title="Mourning Dove">
                 <h4>Mourning Dove</h4>
             </a>
         </div>
@@ -230,7 +230,7 @@
                 <div class="columns">
                     <div class="column is-one-third">
             <a href="https://github.com/joseph-s-foster/Birdwatching-Tennessee">
-                <img src="./assets/motion.png" alt="Placeholder" title="Placeholder">
+                <img src="./assets/Carolina Wren.png" alt="a picture of a wren" title="Carolina Wren">
               <h4>Carolina Wren</h4>
             </a>
         </div>
