--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
                     <h4>Southeastern Bluebird</h4>
                 </a>
                 </div>
-                <p>Definitely a bird</p>
+                <p>Lifespan: 10 years</p>
+                <p>Wingspan: 9.8"</p>
+                <p>Fun Fact: Eastern BlueBirds aren't actually blue, the blue coloration is a trick of the light.</p>
                 </div>
             </div>
 
@@ -52,7 +54,9 @@
                 <h4>Nashville Warbler</h4>
             </a>
         </div>
-        <p>Definitely a bird</p>
+        <p>Lifespan: 8 years</p>
+        <p>Wingspan: 7.5"</p>
+        <p>Fun Fact: The Nashville Warbler has never bred in Tennessee, the name comes from when when Alexander Wilson first saw the bird, while the bird was migrating.</p>
         </div>
     </div>
         </section>
@@ -66,7 +70,9 @@
                 <h4>Dark-Eyed Junco</h4>
             </a>
                 </div>
-        <p>Definitely a bird</p>
+        <p>Lifespan: 11 years</p>
+        <p>Wingspan: 9.25"</p>
+        <p>Fun Fact: The oldest known Dark-eyed Junco in the wild was 11 years 4 months.</p>
                 </div>
             </div>
         </section>
@@ -80,7 +86,9 @@
                 <h4>Red Tailed Hawk</h4>
             </a>
         </div>
-        <p>Definitely a bird</p>
+        <p>Lifespan: 20 years</p>
+        <p>Wingspan: 49"</p>
+        <p>Fun Fact: Filmmakers frequently use the cry of Red-tailed hawk to represent any hawk or eagle.</p>
         </div>
     </div>
         </section>
@@ -94,7 +102,9 @@
                 <h4>Downy Woodpecker</h4>
             </a>
         </div>
-        <p>Definitely a bird</p>
+        <p>Lifespan: 5 years</p>
+        <p>Wingspan: 12"</p>
+        <p>Fun fact: The oldest Downy Woodpecker was 11 years 11 months</p>
         </div>
     </div>
         </section>
@@ -108,7 +118,9 @@
                 <h4>Eastern Screech Owl</h4>
             </a>
         </div>
-        <p>Definitely a bird</p>
+        <p>Lifespan: 10 years</p>
+        <p>Wingspan: 20"</p>
+        <p>Fun fact: Eastern Screech Owls are usually monogamous and pairs remain together for life.</p>
         </div>
     </div>
         </section>
@@ -122,7 +134,9 @@
                 <h4>Northern Cardinal</h4>
             </a>
         </div>
-        <p>Definitely a bird</p>
+        <p>Lifespan: 3-15 years</p>
+        <p>Wingspan: 12"</p>
+        <p>Fun Fact: When the female sings from the nest it's to inform the male whether to bring food to the nest. </p>
         </div>
     </div>
         </section>
@@ -136,7 +150,9 @@
                 <h4>House Finch</h4>
             </a>
         </div>
-        <p>Definitely a bird</p>
+        <p>Lifespan: 11 years</p>
+        <p>Wingspan: 9.5"</p>
+        <p>Fun fact: The orange-red color of a male comes from the food they consume while molting.</p>
         </div>
     </div>
         </section>
@@ -150,7 +166,9 @@
                 <h4>Red-Bellied Woodpecker</h4>
             </a>
         </div>
-        <p>Definitely a bird</p>
+        <p>Lifespan: 12 years  </p>
+        <p>Wingspan: 16"</p>
+        <p>Fun fact: The male may tap loudly to attract a mate. </p>
         </div>
     </div>
         </section>
@@ -164,7 +182,9 @@
                 <h4>Blue Jay</h4>
             </a>
         </div>
-        <p>Definitely a bird</p>
+        <p>Lifespan: 7 years </p>
+        <p>Wingspan: 16" </p>
+        <p>Fun fact: If a Blue Jay is crushed, the blue disappears as the structure is destroyed.</p>
         </div>
     </div>
         </section>
@@ -178,7 +198,9 @@
                 <h4>Ring Necked Dove</h4>
             </a>
         </div>
-        <p>Definitely a bird</p>
+        <p>Lifespan: 15 years </p>
+        <p>Wingspan: 14"</p>
+        <p>Fun fact: Ring Necked Dove reach their adult size in around six weeks.</p>
         </div>
     </div>
         </section>
@@ -192,7 +214,9 @@
                 <h4>American Robin</h4>
             </a>
         </div>
-        <p>Definitely a bird</p>
+        <p>Lifespan: 2 years </p>
+        <p>Wingspan: 17"</p>
+        <p>Fun fact: The oldest wild Robin in record was almost 14 years old.</p>
         </div>
     </div>
         </section>
@@ -206,7 +230,9 @@
                 <h4>Eastern Towhee</h4>
             </a>
         </div>
-        <p>Definitely a bird</p>
+        <p>Lifespan: 12 years</p>
+        <p>Wingspan: 10.5"</p>
+        <p>Fun fact: Eastern Towhee have red eyes across the majority of their range, but in Florida and extreme southern Georgia, they have white eyes. </p>
         </div>
     </div>
         </section>
@@ -220,7 +246,9 @@
                 <h4>Mourning Dove</h4>
             </a>
         </div>
-        <p>Definitely a bird</p>
+        <p>Lifespan: 4 years </p>
+        <p>Wingspan: 18"</p>
+        <p>Fun fact: Mourning Dove have been found to nest every month of the year.</p>
         </div>
     </div>
         </section>
@@ -234,7 +262,9 @@
               <h4>Carolina Wren</h4>
             </a>
         </div>
-        <p>Definitely a bird</p>
+        <p>Lifespan: 6 years </p>
+        <p>Wingspan: 7.5"</p>
+        <p>Fun fact: Females help the males with territorial defense by singing with their mates.</p>
         </div>
     </div>
         </section>
