--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
             <div class="container">
                 <div class="columns">
                     <div class="column is-one-third">
-                <a href="https://github.com/joseph-s-foster/Birdwatching-Tennessee">
-                    <img src="./assets/Southeastern Bluebird.png" alt="a picture of a bluebird" title="Southeastern Bluebird">
-                    <h4>Southeastern Bluebird</h4>
+                <a href="https://www.allaboutbirds.org/guide/Eastern_Bluebird/overview">
+                    <img src="./assets/Southeastern Bluebird.png" alt="a picture of a bluebird" title="Eastern Bluebird">
+                    <h4>Eastern Bluebird</h4>
                 </a>
                 </div>
                 <p>Lifespan: 10 years</p>
