--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
     <link rel="stylesheet" href="./assets/style.css" />
     <title>Birdwatching Tennessee</title>
 </head>
-  
-        <div class="modal" id="weatherModal">
-            <div class="modal-background"></div>
-            <div class="modal-content has-text-centered">
-                <p id="modalMessage"></p>
-            </div>
-            <button class="modal-close is-large" aria-label="close"></button>
-        </div>
-  
+
+<div class="modal" id="weatherModal">
+    <div class="modal-background"></div>
+    <div class="modal-content has-text-centered">
+        <p id="modalMessage"></p>
+    </div>
+    <button class="modal-close is-large" aria-label="close"></button>
+</div>
+
 <body class="has-background-primary">
     <header>
         <h1>Birdwatching Tennessee</h1>
@@ -25,23 +25,18 @@
 
     <main class="container-fluid">
 
-
         <section id="bluebird">
             <div class="container">
                 <div class="columns">
                     <div class="column is-one-third">
-                <a href="https://www.allaboutbirds.org/guide/Eastern_Bluebird/overview">
-                    <img src="./assets/Southeastern Bluebird.png" alt="a picture of a bluebird" title="Eastern Bluebird">
-                    <h4>Eastern Bluebird</h4>
-                </a>
-                </div>
-                <p>Lifespan: 10 years</p>
-                <p>Wingspan: 9.8"</p>
-                <p>Fun Fact: Eastern BlueBirds aren't actually blue, the blue coloration is a trick of the light.</p>
-                </div>
-            </div>
+                        <a href="https://www.allaboutbirds.org/guide/Eastern_Bluebird">
+                            <img src="./assets/Southeastern Bluebird.png" alt="a picture of a bluebird"
+                                title="Eastern Bluebird">
+                            <h4>Eastern Bluebird</h4>
+                        </a>
+                    </div>
 
-            </a>
+                    </a>
 
         </section>
 
@@ -49,224 +44,160 @@
             <div class="container">
                 <div class="columns">
                     <div class="column is-one-third">
-            <a href="https://github.com/joseph-s-foster/Birdwatching-Tennessee">
-                <img src="./assets/Nashville warbler.png" alt="a picture of a warbler" title="Nashville Warbler">
-                <h4>Nashville Warbler</h4>
-            </a>
-        </div>
-        <p>Lifespan: 8 years</p>
-        <p>Wingspan: 7.5"</p>
-        <p>Fun Fact: The Nashville Warbler has never bred in Tennessee, the name comes from when when Alexander Wilson first saw the bird, while the bird was migrating.</p>
-        </div>
-    </div>
+                        <a href="https://www.allaboutbirds.org/guide/Nashville_Warbler">
+                            <img src="./assets/Nashville warbler.png" alt="a picture of a warbler"
+                                title="Nashville Warbler">
+                            <h4>Nashville Warbler</h4>
+                        </a>
+                    </div>
         </section>
 
         <section id="dejunco">
             <div class="container">
                 <div class="columns">
                     <div class="column is-one-third">
-            <a href="https://github.com/joseph-s-foster/Birdwatching-Tennessee">
-                <img src="./assets/Dark-eyed junco.png" alt="a picture of a junco" title="Dark-Eyed Junco">
-                <h4>Dark-Eyed Junco</h4>
-            </a>
-                </div>
-        <p>Lifespan: 11 years</p>
-        <p>Wingspan: 9.25"</p>
-        <p>Fun Fact: The oldest known Dark-eyed Junco in the wild was 11 years 4 months.</p>
-                </div>
-            </div>
+                        <a href="https://www.allaboutbirds.org/guide/Dark-eyed_Junco">
+                            <img src="./assets/Dark-eyed junco.png" alt="a picture of a junco" title="Dark Eyed Junco">
+                            <h4>Dark Eyed Junco</h4>
+                        </a>
+                    </div>
         </section>
 
         <section id="rthawk">
             <div class="container">
                 <div class="columns">
                     <div class="column is-one-third">
-            <a href="https://github.com/joseph-s-foster/Birdwatching-Tennessee">
-                <img src="./assets/Red tail hawk.png" alt="a picture of a hawk" title="Red Tailed Hawk">
-                <h4>Red Tailed Hawk</h4>
-            </a>
-        </div>
-        <p>Lifespan: 20 years</p>
-        <p>Wingspan: 49"</p>
-        <p>Fun Fact: Filmmakers frequently use the cry of Red-tailed hawk to represent any hawk or eagle.</p>
-        </div>
-    </div>
+                        <a href="https://www.allaboutbirds.org/guide/Red-tailed_Hawk">
+                            <img src="./assets/Red tail hawk.png" alt="a picture of a hawk" title="Red Tailed Hawk">
+                            <h4>Red Tailed Hawk</h4>
+                        </a>
+                    </div>
         </section>
 
         <section id="dwoodpecker">
             <div class="container">
                 <div class="columns">
                     <div class="column is-one-third">
-            <a href="https:/github.com/joseph-s-foster/Birdwatching-Tennessee">
-                <img src="./assets/Downy Woodpecker.png" alt="a picture of a woodpecker" title="Downy Woodpecker">
-                <h4>Downy Woodpecker</h4>
-            </a>
-        </div>
-        <p>Lifespan: 5 years</p>
-        <p>Wingspan: 12"</p>
-        <p>Fun fact: The oldest Downy Woodpecker was 11 years 11 months</p>
-        </div>
-    </div>
+                        <a href="https://www.allaboutbirds.org/guide/Downy_Woodpecker">
+                            <img src="./assets/Downy Woodpecker.png" alt="a picture of a woodpecker"
+                                title="Downy Woodpecker">
+                            <h4>Downy Woodpecker</h4>
+                        </a>
+                    </div>
         </section>
 
         <section id="esowl">
             <div class="container">
                 <div class="columns">
                     <div class="column is-one-third">
-            <a href="https://github.com/joseph-s-foster/Birdwatching-Tennessee">
-                <img src="./assets/Eastern screech owl.png" alt="a picture of an owl" title="Eastern Screech Owl">
-                <h4>Eastern Screech Owl</h4>
-            </a>
-        </div>
-        <p>Lifespan: 10 years</p>
-        <p>Wingspan: 20"</p>
-        <p>Fun fact: Eastern Screech Owls are usually monogamous and pairs remain together for life.</p>
-        </div>
-    </div>
+                        <a href="https://www.allaboutbirds.org/guide/Eastern_Screech-Owl">
+                            <img src="./assets/Eastern screech owl.png" alt="a picture of an owl"
+                                title="Eastern Screech Owl">
+                            <h4>Eastern Screech Owl</h4>
+                        </a>
+                    </div>
         </section>
 
         <section id="ncardinal">
             <div class="container">
                 <div class="columns">
                     <div class="column is-one-third">
-            <a href="https://github.com/joseph-s-foster/Birdwatching-Tennessee">
-                <img src="./assets/Northern Cardinal.png" alt="a picture of a cardinal" title="Northern Cardinal">
-                <h4>Northern Cardinal</h4>
-            </a>
-        </div>
-        <p>Lifespan: 3-15 years</p>
-        <p>Wingspan: 12"</p>
-        <p>Fun Fact: When the female sings from the nest it's to inform the male whether to bring food to the nest. </p>
-        </div>
-    </div>
+                        <a href="https://www.allaboutbirds.org/guide/Northern_Cardinal">
+                            <img src="./assets/Northern Cardinal.png" alt="a picture of a cardinal"
+                                title="Northern Cardinal">
+                            <h4>Northern Cardinal</h4>
+                        </a>
+                    </div>
         </section>
 
         <section id="hfinch">
             <div class="container">
                 <div class="columns">
                     <div class="column is-one-third">
-            <a href="https://github.com/joseph-s-foster/Birdwatching-Tennessee">
-                <img src="./assets/House Finch.png" alt="a picture of a Finch" title="House Finch">
-                <h4>House Finch</h4>
-            </a>
-        </div>
-        <p>Lifespan: 11 years</p>
-        <p>Wingspan: 9.5"</p>
-        <p>Fun fact: The orange-red color of a male comes from the food they consume while molting.</p>
-        </div>
-    </div>
+                        <a href="https://www.allaboutbirds.org/guide/House_Finch">
+                            <img src="./assets/House Finch.png" alt="a picture of a Finch" title="House Finch">
+                            <h4>House Finch</h4>
+                        </a>
+                    </div>
         </section>
 
         <section id="rbwoodpecker">
             <div class="container">
                 <div class="columns">
                     <div class="column is-one-third">
-            <a href="https://github.com/joseph-s-foster/Birdwatching-Tennessee">
-                <img src="./assets/Red-Bellied woodpecker.png" alt="a picture of a woodpecker" title="Red-Bellied Woodpecker">
-                <h4>Red-Bellied Woodpecker</h4>
-            </a>
-        </div>
-        <p>Lifespan: 12 years  </p>
-        <p>Wingspan: 16"</p>
-        <p>Fun fact: The male may tap loudly to attract a mate. </p>
-        </div>
-    </div>
+                        <a href="https://www.allaboutbirds.org/guide/Red-bellied_Woodpecker">
+                            <img src="./assets/Red-Bellied woodpecker.png" alt="a picture of a woodpecker"
+                                title="Red Bellied Woodpecker">
+                            <h4>Red Bellied Woodpecker</h4>
+                        </a>
+                    </div>
         </section>
 
         <section id="bjay">
             <div class="container">
                 <div class="columns">
                     <div class="column is-one-third">
-            <a href="https://github.com/joseph-s-foster/Birdwatching-Tennessee">
-                <img src="./assets/Blue Jay.png" alt="a picture of a blue jay" title="Blue Jay">
-                <h4>Blue Jay</h4>
-            </a>
-        </div>
-        <p>Lifespan: 7 years </p>
-        <p>Wingspan: 16" </p>
-        <p>Fun fact: If a Blue Jay is crushed, the blue disappears as the structure is destroyed.</p>
-        </div>
-    </div>
+                        <a href="https://www.allaboutbirds.org/guide/Blue_Jay">
+                            <img src="./assets/Blue Jay.png" alt="a picture of a blue jay" title="Blue Jay">
+                            <h4>Blue Jay</h4>
+                        </a>
+                    </div>
         </section>
 
         <section id="rndove">
             <div class="container">
                 <div class="columns">
                     <div class="column is-one-third">
-            <a href="https://github.com/joseph-s-foster/Birdwatching-Tennessee">
-                <img src="./assets/Ring Necked Dove.png" alt="a picture of a dove" title="Ring Necked Dove">
-                <h4>Ring Necked Dove</h4>
-            </a>
-        </div>
-        <p>Lifespan: 15 years </p>
-        <p>Wingspan: 14"</p>
-        <p>Fun fact: Ring Necked Dove reach their adult size in around six weeks.</p>
-        </div>
-    </div>
+                        <a href="https://www.allaboutbirds.org/guide/Eurasian_Collared-Dove">
+                            <img src="./assets/Eurasian Collared Dove.png" alt="a picture of a dove"
+                                title="Eurasian Collared Dove">
+                            <h4>Eurasian Collared Dove</h4>
+                        </a>
+                    </div>
         </section>
 
         <section id="arobin">
             <div class="container">
                 <div class="columns">
                     <div class="column is-one-third">
-            <a href="https://github.com/joseph-s-foster/Birdwatching-Tennessee">
-                <img src="./assets/American Robin.png" alt="a picture of a robin" title="American Robin">
-                <h4>American Robin</h4>
-            </a>
-        </div>
-        <p>Lifespan: 2 years </p>
-        <p>Wingspan: 17"</p>
-        <p>Fun fact: The oldest wild Robin in record was almost 14 years old.</p>
-        </div>
-    </div>
+                        <a href="https://www.allaboutbirds.org/guide/American_Robin">
+                            <img src="./assets/American Robin.png" alt="a picture of a robin" title="American Robin">
+                            <h4>American Robin</h4>
+                        </a>
+                    </div>
         </section>
 
         <section id="etowhee">
             <div class="container">
                 <div class="columns">
                     <div class="column is-one-third">
-            <a href="https://github.com/joseph-s-foster/Birdwatching-Tennessee">
-                <img src="./assets/Eastern Towhee.png" alt="a picture of a towhee" title="Eastern Towhee">
-                <h4>Eastern Towhee</h4>
-            </a>
-        </div>
-        <p>Lifespan: 12 years</p>
-        <p>Wingspan: 10.5"</p>
-        <p>Fun fact: Eastern Towhee have red eyes across the majority of their range, but in Florida and extreme southern Georgia, they have white eyes. </p>
-        </div>
-    </div>
+                        <a href="https://www.allaboutbirds.org/guide/Eastern_Towhee">
+                            <img src="./assets/Eastern Towhee.png" alt="a picture of a towhee" title="Eastern Towhee">
+                            <h4>Eastern Towhee</h4>
+                        </a>
+                    </div>
         </section>
 
         <section id="mdove">
             <div class="container">
                 <div class="columns">
                     <div class="column is-one-third">
-            <a href="https://github.com/joseph-s-foster/Birdwatching-Tennessee">
-                <img src="./assets/Mourning Dove.png" alt="a picture of a dove" title="Mourning Dove">
-                <h4>Mourning Dove</h4>
-            </a>
-        </div>
-        <p>Lifespan: 4 years </p>
-        <p>Wingspan: 18"</p>
-        <p>Fun fact: Mourning Dove have been found to nest every month of the year.</p>
-        </div>
-    </div>
+                        <a href="https://www.allaboutbirds.org/guide/Mourning_Dove">
+                            <img src="./assets/Mourning Dove.png" alt="a picture of a dove" title="Mourning Dove">
+                            <h4>Mourning Dove</h4>
+                        </a>
+                    </div>
         </section>
 
         <section id="cwren">
             <div class="container">
                 <div class="columns">
                     <div class="column is-one-third">
-            <a href="https://github.com/joseph-s-foster/Birdwatching-Tennessee">
-                <img src="./assets/Carolina Wren.png" alt="a picture of a wren" title="Carolina Wren">
-              <h4>Carolina Wren</h4>
-            </a>
-        </div>
-        <p>Lifespan: 6 years </p>
-        <p>Wingspan: 7.5"</p>
-        <p>Fun fact: Females help the males with territorial defense by singing with their mates.</p>
-        </div>
-    </div>
+                        <a href="https://www.allaboutbirds.org/guide/Carolina_Wren">
+                            <img src="./assets/Carolina Wren.png" alt="a picture of a wren" title="Carolina Wren">
+                            <h4>Carolina Wren</h4>
+                        </a>
+                    </div>
         </section>
 
     </main>
