--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <div class="columns">
                     <div class="column is-one-third">
                         <a href="https://www.allaboutbirds.org/guide/Eastern_Bluebird">
-                            <img src="./assets/Southeastern Bluebird.png" alt="a picture of a bluebird"
+                            <img src="./assets/Eastern Bluebird.png" alt="a picture of a bluebird"
                                 title="Eastern Bluebird">
                             <h4>Eastern Bluebird</h4>
                         </a>
