--- a/index.html
+++ b/index.html
@@ -10,17 +10,9 @@
     <title>Birdwatching Tennessee</title>
 </head>
 
-<div class="modal" id="weatherModal">
-    <div class="modal-background"></div>
-    <div class="modal-content has-text-centered">
-        <p id="modalMessage"></p>
-    </div>
-    <button class="modal-close is-large" aria-label="close"></button>
-</div>
-
-<body class="has-background-primary">
+<body id="top">
     <header>
-        <h1>Birdwatching Tennessee</h1>
+        <h1 class="header">Birdwatching Tennessee</h1>
     </header>
 
     <main class="container-fluid">
@@ -200,7 +192,20 @@
     </main>
 
     <footer>
-
+        <nav class="centered-nav">
+            <ul class="centered-list">
+                <li>
+                    <a href="https://www.allaboutbirds.org/news/" class="top">Resources</a>
+                </li>
+                <li>
+                    <a href="https://github.com/joseph-s-foster/Birdwatching-Tennessee" class="top">GitHub</a>
+                </li>
+                <li>
+                    <a href="#top" class="top">Back to Top</a>
+                </li>
+            </ul>
+        </nav>
+        
     </footer>
 
     <script src="./assets/script.js"></script>
