added hotspot api from ebird

--- a/index.html
+++ b/index.html
@@ -188,6 +188,9 @@
                         </a>
                     </div>
         </section>
+        <div id="card-container">
+            <!-- this will display hotstpots for birds -->
+        </div>
 
     </main>
 
